--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
    
 </head>
 <body>
+    <div>
+<img src="img\v.jpg"  style="width:300px;height:533px;"> 
+</div>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>V</span>
