--- a/index.html
+++ b/index.html
@@ -62,16 +62,22 @@
         // Lirik lagu yang akan ditampilkan
         const lyrics = [
            
-            "Selamat hari jumat, Vania Diah Salsabila!",
+            "Selamat hari jumat, Vania Diah !",
             "Hari ini adalah hari yang spesial,",
-            "Jumat yang penuh potensi dan kebahagiaan.",
+            "Jumat yang penuh potensi ",
+            "dan kebahagiaan.",
             "Semangat baru mengalir begitu kuat,",
-            "membawa energi positif untuk menjalani setiap detiknya.",
-            "Tunjukkan kepada dunia betapa hebatnya dirimu.",
-            "Jadilah sumber inspirasi bagi orang-orang di sekitarmu.",
-            "Semoga hari Jumat ini membawa kebahagiaan,"
-            "keberuntungan, dan kesuksesan untukmu.",
-            "Selamat menjalani hari, Vania! Semangat selalu! 💪🌟"
+            "membawa energi positif untuk", 
+            "menjalani setiap detiknya.",
+            "Tunjukkan kepada dunia betapa",
+            "hebatnya dirimu.",
+            "Jadilah sumber inspirasi",
+            "bagi orang-orang di sekitarmu.",
+            "Semoga hari Jumat ini",
+            "membawa kebahagiaan,"
+            "keberuntungan & kesuksesan untukmu.",
+            "Selamat menjalani hari,", 
+            "Vania! Semangat selalu! 💪🌟"
         ];
 
         // Fungsi untuk menampilkan lirik dengan efek mengetik
