--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             "Jadilah sumber inspirasi",
             "bagi orang-orang di sekitarmu.",
             "Semoga hari Jumat ini",
-            "membawa kebahagiaan,"
+            "membawa kebahagiaan,",
             "keberuntungan & kesuksesan untukmu.",
             "Selamat menjalani hari,", 
             "Vania! Semangat selalu! 💪🌟"
