--- a/index.html
+++ b/index.html
@@ -61,29 +61,20 @@
     <script>
         // Lirik lagu yang akan ditampilkan
         const lyrics = [
-           
-            "Selamat siang bu guru",
-"Tuan putri",
-"Sayangku",
-"Cantikku",
-"Cintakku",
-"Maap ya kalo nyebelin",
-"Gampang ngantuk",
-"Sering ku tinggal tidur duluan",
-"Namanya juga manusia kan..",
-"Jadi ya manusiawi wkwk",
-"Dimaafin yaa..",
-"Kamu kan pemaaf",
-"Baru ngajar ya?",
-"Ganggu bentar",
-"Semangat ya hari ini",
-"Dah setengah hari",
-"Jangan marah marah wkkwkwkkw",
-"S E M A N G A T ! ! ! !",
-"Emm, itu aja sih",
-"Gaje ya hehe",
-"Bye bye cantikuuuuuuuu",
-"btw pasminanya cakep juga🤭"
+            "Selamat hari jumat", 
+            "Vania Diah Salsabila!", 
+            "Hari ini adalah hari yang spesial", 
+            "Jumat yang penuh potensi", 
+            "dan kebahagiaan", 
+            "Semangat baru", 
+            "membawa energi positif",
+            "untuk menjalani setiap detiknya",
+            "Semoga hari Jumat ini", 
+            "membawa kebahagiaan", 
+            "keberuntungan", 
+            "dan kesuksesan untukmu",
+            "Selamat menjalani hari", 
+            "Vania! Semangat selalu! 💪🌟"
         ];
 
         // Fungsi untuk menampilkan lirik dengan efek mengetik
