--- a/index.html
+++ b/index.html
@@ -61,20 +61,14 @@
     <script>
         // Lirik lagu yang akan ditampilkan
         const lyrics = [
-            "Selamat hari jumat", 
-            "Vania Diah Salsabila!", 
-            "Hari ini adalah hari yang spesial", 
-            "Jumat yang penuh potensi", 
-            "dan kebahagiaan", 
-            "Semangat baru", 
-            "membawa energi positif",
+            "Selamat hari jumat Vania Diah Salsabila!", 
+            "Hari ini adalah hari yang indah", 
+            "Jumat yang penuh potensi dan kebahagiaan", 
+            "Semangat baru membawa energi positif",
             "untuk menjalani setiap detiknya",
-            "Semoga hari Jumat ini", 
-            "membawa kebahagiaan", 
-            "keberuntungan", 
-            "dan kesuksesan untukmu",
-            "Selamat menjalani hari", 
-            "Vania! Semangat selalu! 💪🌟"
+            "Semoga hari Jumat ini membawa kebahagiaan", 
+            "keberuntungan dan tentunya kesuksesan untukmu",
+            "Selamat menjalani hari Vania! Semangat selalu! 💪🌟"
         ];
 
         // Fungsi untuk menampilkan lirik dengan efek mengetik
