--- a/index.html
+++ b/index.html
@@ -102,5 +102,13 @@
         // Mulai menampilkan lirik
         displayLyrics();
     </script>
+    
+<div class="description">
+<span>Powered by html & css</span>
+<span>Code editing by Visual Studio 2022</span>
+<span>Pages build by GitHub</span>    
+<span>Text by ChatGPT</span>
+</div>
+    
 </body>
 </html>
