--- a/index.html
+++ b/index.html
@@ -101,14 +101,18 @@
 
         // Mulai menampilkan lirik
         displayLyrics();
-    </script>
-    
+    </script> 
+</body>
+</html>
+
+<!DOCTYPE html>
+<html>
+<body>
 <div class="description">
 <span>Powered by html & css</span>
 <span>Code editing by Visual Studio 2022</span>
 <span>Pages build by GitHub</span>    
 <span>Text by ChatGPT</span>
 </div>
-    
 </body>
 </html>
