--- a/index.html
+++ b/index.html
@@ -107,11 +107,31 @@
 
 <!DOCTYPE html>
 <html>
+<head>
+    <style>
+        /* CSS untuk efek mengetik */
+        #end {
+            white-space: pre;
+            overflow: hidden;
+            font-size: 10px;
+            font-family: monospace;
+            margin: 0 auto;
+            color: #fff
+        }
+    </style>
+</head> 
 <body>
-<div class="description">
+<div id="end"></div>    
+<div>    
 <span>Powered by html & css</span>
+</div>
+<div>    
 <span>Code editing by Visual Studio 2022</span>
-<span>Pages build by GitHub</span>    
+</div>
+<div>    
+<span>Pages build by GitHub</span>
+</div>
+<div>
 <span>Text by ChatGPT</span>
 </div>
 </body>
