--- a/index.html
+++ b/index.html
@@ -107,21 +107,9 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-    <style>
-        /* CSS untuk efek mengetik */
-        #end {
-            white-space: pre;
-            overflow: hidden;
-            font-size: 10px;
-            font-family: monospace;
-            margin: 0 auto;
-            color: #fff
-        }
-    </style>
-</head> 
-<body>
-<div id="end"></div>    
+<body> 
+    
+        <div class="endi">    
 <div>    
 <span>Powered by html & css</span>
 </div>
