--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 
 <!DOCTYPE html>
 <html>
+    <head>
+           <link rel="stylesheet" href="css/style.css">
+        <head/>
 <body> 
     
         <div class="endi">    
