--- a/index.html
+++ b/index.html
@@ -35,19 +35,6 @@
         <span>L</span>
         <span>A</span>
 
-<div class="description">
-<span>Powered by html & css</span>
-</div>
-<div class="description"> 
-<span>Code editing by Visual Studio 2022</span>
-</div>
-<div class="description">  
-<span>Pages build by GitHub</span>
-</div>
-<div class="description">    
-<span>Text by ChatGPT</span>
-</div>       
-
 </body>
 </html>
 
@@ -119,5 +106,33 @@
 </html>
 
 
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        /* CSS untuk efek mengetik */
+        #lyrics {
+            white-space: pre;
+            overflow: hidden;
+            font-size: 16px;
+            border-right: .15em solid orange;
+            font-family: monospace;
+            margin: 0 auto;
+            color: #fff
+        }
+    </style>
+</head>
+<body>
+    <div id="lyrics"></div>
+
+    <script>
+        // Lirik lagu yang akan ditampilkan
+        const lyrics = [
+            "Powered by Visual Studio 2022 and GitHub"
+        ];
+
+         </script> 
+</body>
+</html>
     
 
