--- a/index.html
+++ b/index.html
@@ -111,11 +111,8 @@
 <head>
     <style>
         /* CSS untuk efek mengetik */
-        #lyrics {
-            white-space: pre;
-            overflow: hidden;
-            font-size: 16px;
-            border-right: .15em solid orange;
+        #ed {
+            font-size: 10px;
             font-family: monospace;
             margin: 0 auto;
             color: #fff
@@ -123,7 +120,7 @@
     </style>
 </head>
 <body>
-    <div id="lyrics"></div>
+    <div id="ed"></div>
 
     <script>
         // Lirik lagu yang akan ditampilkan
