--- a/index.html
+++ b/index.html
@@ -102,34 +102,10 @@
         // Mulai menampilkan lirik
         displayLyrics();
     </script> 
+
+ </div>
+    <div class="description">
+        <span>Powered by Visual Studio 2022 and GitHub</span>
+    </div>    
 </body>
 </html>
-
-
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
-        /* CSS untuk efek mengetik */
-        #ed {
-            font-size: 10px;
-            font-family: monospace;
-            margin: 0 auto;
-            color: #fff
-        }
-    </style>
-</head>
-<body>
-    <div id="ed"></div>
-
-    <script>
-        // Lirik lagu yang akan ditampilkan
-        const lyrics = [
-            "Powered by Visual Studio 2022 and GitHub"
-        ];
-
-         </script> 
-</body>
-</html>
-    
-
