--- a/index.html
+++ b/index.html
@@ -102,5 +102,27 @@
         // Mulai menampilkan lirik
         displayLyrics();
     </script> 
+</body>
+</html>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>sas</title>
 
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/flowers.png" type="image/x-icon">
+   
+</head>
+<body>
+    
+    </div>
+    <div class="description">
+        <span>Powered by Visual Studio 2022 and GitHub</span>
+    </div> 
+
+</body>
+</html>
    
