--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         <span>I</span>
         <span>L</span>
         <span>A</span>
-
+</div>
+    <div class="description">
+        <span>Powered by Visual Studio 2022 and GitHub</span>
+    </div> 
 </body>
 </html>
 
