--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <style>
         /* CSS untuk efek mengetik */
         #lyrics {
