--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
     </style>
 </head>
 <body>
+     <div class="description">
+        <span>by sayangmu</span>
+    </div>
     <div id="lyrics"></div>
 
     <script>
@@ -111,8 +114,6 @@
         displayLyrics();
     </script> 
     </div>
-    <div class="description">
-        <span>Powered by Visual Studio 2022 and GitHub</span>
-    </div>
+   
 </body>
 </html>
