--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <style>
         /* CSS untuk efek mengetik */
         #lyrics {
