--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 <body>
  
 <div class="description">
-        <span>by sayangmu</span>
+    <center>
+        <span>by sayangmu 💜</span>
+        </center>
     </div> 
 
  
