--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>sas</title>
+
+    <link rel="stylesheet" href="css/st.css">
+    <link rel="icon" href="img/flowers.png" type="image/x-icon">
+   
+</head>
+<body>
+ 
+<div class="description">
+    <center>
+        <span>my lovely❤</span>
+        </center>
+    </div> 
+
+ 
+</body>
+</html>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -38,29 +62,7 @@
 </body>
 </html>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sas</title>
 
-    <link rel="stylesheet" href="css/st.css">
-    <link rel="icon" href="img/flowers.png" type="image/x-icon">
-   
-</head>
-<body>
- 
-<div class="description">
-    <center>
-        <span>by sayangmu 💜</span>
-        </center>
-    </div> 
-
- 
-</body>
-</html>
 
 
 <!DOCTYPE html>
