--- a/index.html
+++ b/index.html
@@ -90,14 +90,19 @@
     <script>
         // Lirik lagu yang akan ditampilkan
         const lyrics = [
-            "Selamat hari jumat Vania Diah Salsabila!", 
-            "Hari ini adalah hari yang indah", 
-            "Jumat yang penuh potensi dan kebahagiaan", 
-            "Semangat baru membawa energi positif",
-            "untuk menjalani setiap detiknya",
-            "Semoga hari Jumat ini membawa kebahagiaan", 
-            "keberuntungan dan tentunya kesuksesan untukmu",
-            "Selamat menjalani hari Vania! Semangat selalu! 💪🌟"
+            "Selamat pagi!", 
+            "Sayangkuu", 
+            "Cantikku", 
+            "Semangatkuu",
+            "Cintakuuu",
+            "Semoga hari indah", 
+            "tapi kamu nyebelin",
+            "Ga bangun pagi",
+            "Masih ngantuk lagi",
+            "Huuuuuuuuuuuuuuuuuuu",
+            "Apa itu",
+            "Jelekkkkkkkkkkk",
+            "🤍🤍🤍🤍🤍🤍🤍🤍🤍🤍"
         ];
 
         // Fungsi untuk menampilkan lirik dengan efek mengetik
