--- a/index.html
+++ b/index.html
@@ -90,19 +90,36 @@
     <script>
         // Lirik lagu yang akan ditampilkan
         const lyrics = [
-            "Selamat pagi!", 
-            "Sayangkuu", 
-            "Cantikku", 
-            "Semangatkuu",
-            "Cintakuuu",
-            "Semoga hari indah", 
-            "tapi kamu nyebelin",
-            "Ga bangun pagi",
-            "Masih ngantuk lagi",
-            "Huuuuuuuuuuuuuuuuuuu",
-            "Apa itu",
-            "Jelekkkkkkkkkkk",
-            "🤍🤍🤍🤍🤍🤍🤍🤍🤍🤍"
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN",
+            "NYEBELINNNNNNNNNNNNNNNNN"
+
         ];
 
         // Fungsi untuk menampilkan lirik dengan efek mengetik
