--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
     <script>
         // Lirik lagu yang akan ditampilkan
         const lyrics = [
+            "SIANG INIIIII",
+            "KAMUUUUUUUUUUUUUUUU",
+            "SANGATTTTTT",
+            "AMATTTTTTTTTTT",
             "NYEBELINNNNNNNNNNNNNNNNN",
             "NYEBELINNNNNNNNNNNNNNNNN",
             "NYEBELINNNNNNNNNNNNNNNNN",
